Accept hue == -1 in Qt.hsla() and Qt.hslv()

The documentation says that acromatic colors have a hue value of -1.
QColor does already accept -1 in the fromHsv/Hsl functions.

Fixes: QTBUG-127034
Change-Id: I62928e4fe4b9ca569df13c5b82e9de028a7c09ff
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit aac4168a7dda18a5a6bd9350c048ca97973d0fdf)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>