tests/auto/qml/qqmlqt/tst_qqmlqt.cpp
@@ -198,6 +198,9 @@ void tst_qqmlqt::hsla()
     QCOMPARE(qvariant_cast<QColor>(object->property("test4")), QColor());
     QCOMPARE(qvariant_cast<QColor>(object->property("test5")), QColor::fromHslF(1, 1, 1, 1));
     QCOMPARE(qvariant_cast<QColor>(object->property("test6")), QColor::fromHslF(0, 0, 0, 0));
+    QColor test7 = qvariant_cast<QColor>(object->property("test7"));
+    QCOMPARE(test7, QColor::fromHslF(-1, 0, 0.5, 1));
+    QCOMPARE(test7.hslHue(), -1.0f);
 }
 
 void tst_qqmlqt::hsva()
@@ -218,6 +221,9 @@ void tst_qqmlqt::hsva()
     QCOMPARE(qvariant_cast<QColor>(object->property("test4")), QColor());
     QCOMPARE(qvariant_cast<QColor>(object->property("test5")), QColor::fromHsvF(1, 1, 1, 1));
     QCOMPARE(qvariant_cast<QColor>(object->property("test6")), QColor::fromHsvF(0, 0, 0, 0));
+    QColor test7 = qvariant_cast<QColor>(object->property("test7"));
+    QCOMPARE(test7, QColor::fromHsvF(-1, 0, 0.5, 1));
+    QCOMPARE(test7.hsvHue(), -1.0f);
 }
 
 void tst_qqmlqt::colorEqual()
